Fix scrollbar styling

--- a/dapp-oeth/styles/globals.css
+++ b/dapp-oeth/styles/globals.css
@@ -33,18 +33,18 @@ body {
 }
 
 ::-webkit-scrollbar-corner {
-  background: #1E1F25;
+  background: #1e1f25;
 }
 
 ::-webkit-scrollbar-track {
-  background: #1E1F25;
+  background: #1e1f25;
   border-radius: 20px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #1e1f25;
+  background-color: #101113;
   border-radius: 20px;
-  border: 1px #1E1F25;
+  border: 1px #101113;
 }
 
 a {
